--- a/src/index.html
+++ b/src/index.html
@@ -4,12 +4,15 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="./vendor/style/normalize.css">
+  <link rel="stylesheet" href="./vendor/style/materialize.min.css">
   <link rel="stylesheet" href="../dist/main.css">
   <title>Document</title>
 </head>
-<body>
-    <h1>Hello world</h1>
+<body class="">
   
+  
+    <script src="./vendor/scripts/materialize.min.js"></script>
     <script src="../dist/main.js"></script>
 </body>
 </html>
