feat: index page and colors

--- a/src/index.html
+++ b/src/index.html
@@ -9,10 +9,26 @@
   <link rel="stylesheet" href="../dist/main.css">
   <title>Document</title>
 </head>
-<body class="">
-  
-  
-    <script src="./vendor/scripts/materialize.min.js"></script>
-    <script src="../dist/main.js"></script>
+<body class="grey darken-4 amber-text text-lighten-5 body">
+  <header class="deep-purple darken-4">
+    <div class="container">
+      header
+    </div>
+  </header>
+  <main>
+    <section>
+      <div class="container">
+        <h1 class="flow-text1">Все курсы программирования</h1>
+        <p>Мы собрали скидки и отзывы почти обо всех курсах программирования, чтобы вы могли выбрать лучшие</p>
+      </div>
+    </section>
+  </main>
+  <footer class="deep-purple darken-4">
+    <div class="container">
+      footer
+    </div>
+  </footer>  
+  <script src="./vendor/scripts/materialize.min.js"></script>
+  <script src="../dist/main.js"></script>
 </body>
 </html>
