--- a/src/index.html
+++ b/src/index.html
@@ -25,11 +25,24 @@
 
 
     <div class="container">
-      <div class="card__group">
-        <img src="images/codecamp.jpg" alt="" class="card__image">
-        <div class="card__group_content">
-          <h1>Card content</h1>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla, earum.</p>
+      <div class="row">
+        <div class="col m6 s12">
+          <div class="card__group">
+            <img src="images/codecamp.jpg" alt="" class="card__image">
+            <div class="card__group_content">
+              <h2>Hexlet</h2>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla, earum.</p>
+            </div>
+          </div>
+        </div>
+        <div class="col m6 s12">
+          <div class="card__group">
+            <img src="images/codecamp.jpg" alt="" class="card__image">
+            <div class="card__group_content">
+              <h2>Yandex Prakticum</h2>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla, earum.</p>
+            </div>
+          </div>
         </div>
       </div>
     </div>
