style for promo section

--- a/src/index.html
+++ b/src/index.html
@@ -16,10 +16,13 @@
     </div>
   </header>
   <main>
-    <section>
-      <div class="container">
-        <h1 class="flow-text1">Все курсы программирования</h1>
-        <p>Мы собрали скидки и отзывы почти обо всех курсах программирования, чтобы вы могли выбрать лучшие</p>
+    <!-- https://demo.w3layouts.com/demos_new/template_demo/18-03-2021/study-course-starter-demo_Free/1612283260/web/index.html?_gl=1*ukhbs*_ga*MzgyMjEwMjYuMTY4MDI4Nzk1Nw..*_ga_EGV5GTJEP5*MTY4MDQxNTY0NS4zLjEuMTY4MDQxNjI0NS4wLjAuMA..*_ga_9HSZ46TKMQ*MTY4MDQxNTY0NS4zLjEuMTY4MDQxNjI0NS4wLjAuMA..&_ga=2.5532851.1212181575.1680415646-38221026.1680287957 -->
+    <section class="promo">
+      <div class="promo__mask valign-wrapper">
+        <div class="container">
+          <h1 class="center promo__title">Все курсы программирования</h1>
+          <p class="center promo__subtitle">Мы собрали скидки и отзывы почти обо всех курсах программирования, чтобы вы могли выбрать лучшие</p>
+        </div>
       </div>
     </section>
 
