--- a/src/index.html
+++ b/src/index.html
@@ -21,6 +21,7 @@
       <div class="promo__mask valign-wrapper">
         <div class="container">
           <h1 class="center promo__title">Все курсы программирования</h1>
+          <p class="center promo__subtitle">Объективное сравнение курсов программирования</p>
           <p class="center promo__subtitle">Мы собрали скидки и отзывы почти обо всех курсах программирования, чтобы вы могли выбрать лучшие</p>
         </div>
       </div>
@@ -49,12 +50,6 @@
         </div>
       </div>
     </div>
-
-
-
-
-
-
   </main>
   <footer class="deep-purple darken-4">
     <div class="container">
